# complexity72h

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  c27_pca.ipynb  justfile  pyproject.toml  requirements.txt
configs/: config.yaml  subject_corr.yaml
configs/clustering/: default.yaml
configs/components/: default.yaml
configs/io/: default.yaml
configs/plotting/: default.yaml  plt.mplstyle
notebooks/: clustering.py  eda.py
results/: c27_pca.ipynb
scripts/: cluster_subject_corr.py  clustering.py  eda_social_metrics.py  example.py  export_cluster_membership.py  pca.py  plot_cluster_stats_heatmap.py  statistical_tests_clusters.py
src/data/: loaders.py
src/insideout/: __init__.py  decomposition.py  graph_models.py  io.py
src/insideout/analysis/clustering/: kmeans.py
src/insideout/analysis/pls/: __main__.py  associator.py  features.py  visualize.py
src/insideout/data/: __init__.py  loaders.py
src/insideout/features/: schaefer_yeo.py
src/insideout/viz/: __init__.py  clustering.py  correlation.py  distributions.py  pca.py  precision.py  utils.py
