[project]
name = "insideout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3",
    "marimo>=0.23.10",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]
